--- a/card-product.html
+++ b/card-product.html
@@ -20,7 +20,7 @@
 					</a>
 				</div>
 				<ul class="header__menu">
-					<li class="header__link header__link--active"><a href="./index.html">Главная</a></li>
+					<li class="header__link"><a href="./index.html">Главная</a></li>
 					<li class="header__link"><a href="./guarantees.html">Гарантии</a></li>
 					<li class="header__link"><a href="./news.html">Новости</a></li>
 					<li class="header__link"><a href="./reviews.html">Отзывы</a></li>
@@ -51,7 +51,7 @@
 						</div>
 
 						<ul>
-							<li class="header__link header__link--active"><a href="./index.html">Главная</a></li>
+							<li class="header__link"><a href="./index.html">Главная</a></li>
 							<li class="header__link"><a href="./guarantees.html">Гарантии</a></li>
 							<li class="header__link"><a href="./news/html">Новости</a></li>
 							<li class="header__link"><a href="./reviews.html">Отзывы</a></li>
@@ -67,14 +67,14 @@
 	<main class="product-card-main">
 		<section class="breadcrumbs">
 			<div class="container">
-				<nav aria-label="Breadcrumb" class="breadcrumb"> 
+				<nav aria-label="Breadcrumb" class="breadcrumb">
 					<ul class="breadcrumb__list">
 						<li class="breadcrumb__link"><a href="#">Премиум магазины </a></li>
 						<li class="breadcrumb__link"><a href="#">Скины </a></li>
 						<li class="breadcrumb__link breadcrumb__link--current"><span aria-current="page">Снегобой</span>
 						</li>
 					</ul>
-					<a class="btn-prev-page">Назад </a>
+					<a href="./index.html" class="btn-prev-page">Назад </a>
 				</nav>
 			</div>
 		</section>
@@ -290,7 +290,7 @@
 										<input class="payment-form__input" type="email" placeholder="me@example.com">
 									</label>
 								</div>
-								<button type="submit" class="payment-form__btn-next btn--purple btn--form" 
+								<button type="submit" class="payment-form__btn-next btn--purple btn--form"
 									data-custom-close="modal">
 									Оплатить
 								</button>
@@ -307,37 +307,38 @@
 	</div>
 	<footer class="footer">
 		<div class="container">
-		   <div class="footer__inner">
-			  <div class="footer__info">
-				 <a class="logo" href="/">
-					<img class="logo__img" src="./images/icons/logo.svg" alt="logo">
-				 </a>
-				 <p class="footer__text">Премиум магазин скинов Fortnite</p>
-				 <a class="footer__political-link" href="#">
-					<span>Политика конфиденциальности</span>
-				 </a>
-				 <a class="footer__agreement-link" href="#">
-					<span>Пользовательское соглашение</span>
-				 </a>
-			  </div>
-  
-			  <div class="footer__payment">
-				 <p class="footer__payment-text">В данный момент доступны такие типы оплаты:</p>
-				 <div class="footer__payment-box">
-					<img class="footer__payment-img" src="./images/icons/perfect_money.svg" alt="perfect_money-icon">
-					<img class="footer__payment-img" src="./images/icons/qiwi-crypto.svg" alt="qiwi-crypto-icon">
-					<img class="footer__payment-img" src="./images/icons/yandex-money.svg" alt="yandex-money-icon">
-					<img class="footer__payment-img" src="./images/icons/visa.svg" alt="visa-icon">
-					<img class="footer__payment-img" src="./images/icons/mastercard.svg" alt="mastercard-icon">
-					<img class="footer__payment-img" src="./images/icons/payeer.svg" alt="payeer-icon">
-					<img class="footer__payment-img" src="./images/icons/mir.svg" alt="mir-icon">
-				 </div>
-			  </div>
-  
-		   </div>
+			<div class="footer__inner">
+				<div class="footer__info">
+					<a class="logo" href="./index.html">
+						<img class="logo__img" src="./images/icons/logo.svg" alt="logo">
+					</a>
+					<p class="footer__text">Премиум магазин скинов Fortnite</p>
+					<a class="footer__political-link" href="#">
+						<span>Политика конфиденциальности</span>
+					</a>
+					<a class="footer__agreement-link" href="#">
+						<span>Пользовательское соглашение</span>
+					</a>
+				</div>
+
+				<div class="footer__payment">
+					<p class="footer__payment-text">В данный момент доступны такие типы оплаты:</p>
+					<div class="footer__payment-box">
+						<img class="footer__payment-img" src="./images/icons/perfect_money.svg"
+							alt="perfect_money-icon">
+						<img class="footer__payment-img" src="./images/icons/qiwi-crypto.svg" alt="qiwi-crypto-icon">
+						<img class="footer__payment-img" src="./images/icons/yandex-money.svg" alt="yandex-money-icon">
+						<img class="footer__payment-img" src="./images/icons/visa.svg" alt="visa-icon">
+						<img class="footer__payment-img" src="./images/icons/mastercard.svg" alt="mastercard-icon">
+						<img class="footer__payment-img" src="./images/icons/payeer.svg" alt="payeer-icon">
+						<img class="footer__payment-img" src="./images/icons/mir.svg" alt="mir-icon">
+					</div>
+				</div>
+
+			</div>
 		</div>
-	 </footer>
-	 <script src="https://cdnjs.cloudflare.com/ajax/libs/micromodal/0.4.10/micromodal.min.js"
+	</footer>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/micromodal/0.4.10/micromodal.min.js"
 		integrity="sha512-qcwcAul7d7yUcoz3MmQABiaGDa+gVkaDWgZX6wEd/z3I6z62nQCDW3EqioQG+O+QlGCpxmJLdH5snh4IaDPiPA=="
 		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="js/modal.js"></script>
