--- a/reviews.html
+++ b/reviews.html
@@ -20,10 +20,10 @@
 					</a>
 				</div>
 				<ul class="header__menu">
-					<li class="header__link header__link--active"><a href="./index.html">Главная</a></li>
+					<li class="header__link "><a href="./index.html">Главная</a></li>
 					<li class="header__link"><a href="./guarantees.html">Гарантии</a></li>
 					<li class="header__link"><a href="./news.html">Новости</a></li>
-					<li class="header__link"><a href="./reviews.html">Отзывы</a></li>
+					<li class="header__link header__link--active"><a href="./reviews.html">Отзывы</a></li>
 				</ul>
 				<div class="header__btns">
 					<a href="tel:" class="header__btn-call">
@@ -51,10 +51,11 @@
 						</div>
 
 						<ul>
-							<li class="header__link header__link--active"><a href="./index.html">Главная</a></li>
+							<li class="header__link"><a href="./index.html">Главная</a></li>
 							<li class="header__link"><a href="./guarantees.html">Гарантии</a></li>
-							<li class="header__link"><a href="./news/html">Новости</a></li>
-							<li class="header__link"><a href="./reviews.html">Отзывы</a></li>
+							<li class="header__link"><a href="./news.html">Новости</a></li>
+							<li class="header__link header__link--active"><a href="./reviews.html">Отзывы</a></li>
+
 						</ul>
 
 					</div>
@@ -65,7 +66,7 @@
 
 	</header>
 	<main>
-		<section class="breadcrambs">
+		<section class="breadcrumbs">
 			<div class="container">
 				<nav aria-label="Breadcrumb" class="breadcrumb">
 					<ul class="breadcrumb__list">
@@ -73,7 +74,7 @@
 						<li class="breadcrumb__link breadcrumb__link--current"><span aria-current="page">Отзывы</span>
 						</li>
 					</ul>
-					<a class="btn-prev-page">Назад </a>
+					<a href="./index.html" class="btn-prev-page">Назад </a>
 				</nav>
 			</div>
 		</section>
@@ -158,37 +159,38 @@
 	</main>
 	<footer class="footer">
 		<div class="container">
-		   <div class="footer__inner">
-			  <div class="footer__info">
-				 <a class="logo" href="/">
-					<img class="logo__img" src="./images/icons/logo.svg" alt="logo">
-				 </a>
-				 <p class="footer__text">Премиум магазин скинов Fortnite</p>
-				 <a class="footer__political-link" href="#">
-					<span>Политика конфиденциальности</span>
-				 </a>
-				 <a class="footer__agreement-link" href="#">
-					<span>Пользовательское соглашение</span>
-				 </a>
-			  </div>
-  
-			  <div class="footer__payment">
-				 <p class="footer__payment-text">В данный момент доступны такие типы оплаты:</p>
-				 <div class="footer__payment-box">
-					<img class="footer__payment-img" src="./images/icons/perfect_money.svg" alt="perfect_money-icon">
-					<img class="footer__payment-img" src="./images/icons/qiwi-crypto.svg" alt="qiwi-crypto-icon">
-					<img class="footer__payment-img" src="./images/icons/yandex-money.svg" alt="yandex-money-icon">
-					<img class="footer__payment-img" src="./images/icons/visa.svg" alt="visa-icon">
-					<img class="footer__payment-img" src="./images/icons/mastercard.svg" alt="mastercard-icon">
-					<img class="footer__payment-img" src="./images/icons/payeer.svg" alt="payeer-icon">
-					<img class="footer__payment-img" src="./images/icons/mir.svg" alt="mir-icon">
-				 </div>
-			  </div>
-  
-		   </div>
+			<div class="footer__inner">
+				<div class="footer__info">
+					<a class="logo" href="/">
+						<img class="logo__img" src="./images/icons/logo.svg" alt="logo">
+					</a>
+					<p class="footer__text">Премиум магазин скинов Fortnite</p>
+					<a class="footer__political-link" href="#">
+						<span>Политика конфиденциальности</span>
+					</a>
+					<a class="footer__agreement-link" href="#">
+						<span>Пользовательское соглашение</span>
+					</a>
+				</div>
+
+				<div class="footer__payment">
+					<p class="footer__payment-text">В данный момент доступны такие типы оплаты:</p>
+					<div class="footer__payment-box">
+						<img class="footer__payment-img" src="./images/icons/perfect_money.svg"
+							alt="perfect_money-icon">
+						<img class="footer__payment-img" src="./images/icons/qiwi-crypto.svg" alt="qiwi-crypto-icon">
+						<img class="footer__payment-img" src="./images/icons/yandex-money.svg" alt="yandex-money-icon">
+						<img class="footer__payment-img" src="./images/icons/visa.svg" alt="visa-icon">
+						<img class="footer__payment-img" src="./images/icons/mastercard.svg" alt="mastercard-icon">
+						<img class="footer__payment-img" src="./images/icons/payeer.svg" alt="payeer-icon">
+						<img class="footer__payment-img" src="./images/icons/mir.svg" alt="mir-icon">
+					</div>
+				</div>
+
+			</div>
 		</div>
-	 </footer>
-	 <script src="js/header.js"></script>
+	</footer>
+	<script src="js/header.js"></script>
 </body>
 
 </html>
