--- a/participation.html
+++ b/participation.html
@@ -2,26 +2,26 @@
 <html lang="ru">
 
 <head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>FortNite</title>
-   <link rel="stylesheet" href="css/style.css">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>FortNite</title>
+	<link rel="stylesheet" href="css/style.css">
 
 </head>
 
 <body>
-   <header class="header">
+	<header class="header">
 		<div class="header__container container">
 
 			<div class="header__row">
 				<div class="header__logo">
-               <a href="./index.html">
+					<a href="./index.html">
 						<img src="./images/icons//logo.svg" alt="logo" />
 					</a>
 				</div>
 				<ul class="header__menu">
-					<li class="header__link header__link--active"><a href="./index.html">Главная</a></li>
+					<li class="header__link "><a href="./index.html">Главная</a></li>
 					<li class="header__link"><a href="./guarantees.html">Гарантии</a></li>
 					<li class="header__link"><a href="./news.html">Новости</a></li>
 					<li class="header__link"><a href="./reviews.html">Отзывы</a></li>
@@ -52,7 +52,7 @@
 						</div>
 
 						<ul>
-							<li class="header__link header__link--active"><a href="./index.html">Главная</a></li>
+							<li class="header__link "><a href="./index.html">Главная</a></li>
 							<li class="header__link"><a href="./guarantees.html">Гарантии</a></li>
 							<li class="header__link"><a href="./news/html">Новости</a></li>
 							<li class="header__link"><a href="./reviews.html">Отзывы</a></li>
@@ -65,130 +65,132 @@
 		</div>
 
 	</header>
-   <section class="participation">
-      <div class="container">
-         <div class="participation__inner">
-            <div class="participation__recent">
-               <h2 class="participation__recent-title">Последние победители:</h2>
-
-               <div class="participation__recent-item">
-                  <p class="participation__recent-name">Михаил Федитник</p>
-                  <div class="participation__recent-box">
-                     <span class="participation__recent-group">L-60</span>
-                     <p class="participation__recent-date">20 мая 2022</p>
-                  </div>
-               </div>
-
-               <div class="participation__recent-item">
-                  <p class="participation__recent-name">Михаил Федитник</p>
-                  <div class="participation__recent-box">
-                     <span class="participation__recent-group">L-60</span>
-                     <p class="participation__recent-date">20 мая 2022</p>
-                  </div>
-               </div>
-               <div class="participation__recent-item">
-                  <p class="participation__recent-name">Михаил Федитник</p>
-                  <div class="participation__recent-box">
-                     <span class="participation__recent-group">L-60</span>
-                     <p class="participation__recent-date">20 мая 2022</p>
-                  </div>
-               </div>
-
-               <div class="participation__recent-item">
-                  <p class="participation__recent-name">Михаил Федитник</p>
-                  <div class="participation__recent-box">
-                     <span class="participation__recent-group">L-60</span>
-                     <p class="participation__recent-date">20 мая 2022</p>
-                  </div>
-               </div>
-
-               <div class="participation__recent-item">
-                  <p class="participation__recent-name">Михаил Федитник</p>
-                  <div class="participation__recent-box">
-                     <span class="participation__recent-group">L-60</span>
-                     <p class="participation__recent-date">20 мая 2022</p>
-                  </div>
-               </div>
-            </div>
-            <div class="participation__howto">
-               <h2 class="participation__howto-title">Как принять участие?</h2>
-
-               <ul class="participation__howto-stages">
-                  <li class="participation__howto-list">
-                     <span class="participation__howto-num">1</span>
-                     <a class="participation__howto-link" href="#">Авторизируйтесь</a>
-                     в нашем премиум магазине
-                  </li>
-
-                  <li class="participation__howto-list">
-                     <span class="participation__howto-num">2</span>
-                     Укажите email вашего игрового аккаунта в
-                     <a class="participation__howto-link" href="#">личном кабинете</a>
-                  </li>
-
-                  <li class="participation__howto-list">
-                     <span class="participation__howto-num">3</span>
-                     Поделитесь ссылкой с друзьями
-                     <div class="participation__howto-share">
-                        <a class="paticipation__howto-social" href="#">
-                           <img class="participation__howto-img" src="./images/icons/vk.svg" alt="vk-icon">
-                        </a>
-                        <a class="paticipation__howto-social" href="#">
-                           <img class="participation__howto-img" src="./images/icons/facebook.svg" alt="facebook-icon">
-                        </a>
-                        <a class="paticipation__howto-social" href="#">
-                           <img class="participation__howto-img" src="./images/icons/mail-ru-mir.svg"
-                              alt="mail-ru-mir-icon">
-                        </a>
-                     </div>
-                  </li>
-
-                  <li class="participation__howto-list">
-                     <span class="participation__howto-num">4</span>
-                     Нажмите внизу на кнопку <span>“УЧАСТВОВАТЬ”</span>
-                  </li>
-               </ul>
-               <button class="participation__howto-btn" type="submit">Участвовать<button>
-            </div>
-         </div>
-      </div>
-   </section>
-   <footer class="footer">
+	<section class="participation">
 		<div class="container">
-		   <div class="footer__inner">
-			  <div class="footer__info">
-				 <a class="logo" href="/">
-					<img class="logo__img" src="./images/icons/logo.svg" alt="logo">
-				 </a>
-				 <p class="footer__text">Премиум магазин скинов Fortnite</p>
-				 <a class="footer__political-link" href="#">
-					<span>Политика конфиденциальности</span>
-				 </a>
-				 <a class="footer__agreement-link" href="#">
-					<span>Пользовательское соглашение</span>
-				 </a>
-			  </div>
-  
-			  <div class="footer__payment">
-				 <p class="footer__payment-text">В данный момент доступны такие типы оплаты:</p>
-				 <div class="footer__payment-box">
-					<img class="footer__payment-img" src="./images/icons/perfect_money.svg" alt="perfect_money-icon">
-					<img class="footer__payment-img" src="./images/icons/qiwi-crypto.svg" alt="qiwi-crypto-icon">
-					<img class="footer__payment-img" src="./images/icons/yandex-money.svg" alt="yandex-money-icon">
-					<img class="footer__payment-img" src="./images/icons/visa.svg" alt="visa-icon">
-					<img class="footer__payment-img" src="./images/icons/mastercard.svg" alt="mastercard-icon">
-					<img class="footer__payment-img" src="./images/icons/payeer.svg" alt="payeer-icon">
-					<img class="footer__payment-img" src="./images/icons/mir.svg" alt="mir-icon">
-				 </div>
-			  </div>
-  
-		   </div>
-		</div>
-	 </footer>
+			<div class="participation__inner">
+				<div class="participation__recent">
+					<h2 class="participation__recent-title">Последние победители:</h2>
 
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-   <script src="js/main.js"></script>
-   <script src="js/header.js"></script>
+					<div class="participation__recent-item">
+						<p class="participation__recent-name">Михаил Федитник</p>
+						<div class="participation__recent-box">
+							<span class="participation__recent-group">L-60</span>
+							<p class="participation__recent-date">20 мая 2022</p>
+						</div>
+					</div>
+
+					<div class="participation__recent-item">
+						<p class="participation__recent-name">Михаил Федитник</p>
+						<div class="participation__recent-box">
+							<span class="participation__recent-group">L-60</span>
+							<p class="participation__recent-date">20 мая 2022</p>
+						</div>
+					</div>
+					<div class="participation__recent-item">
+						<p class="participation__recent-name">Михаил Федитник</p>
+						<div class="participation__recent-box">
+							<span class="participation__recent-group">L-60</span>
+							<p class="participation__recent-date">20 мая 2022</p>
+						</div>
+					</div>
+
+					<div class="participation__recent-item">
+						<p class="participation__recent-name">Михаил Федитник</p>
+						<div class="participation__recent-box">
+							<span class="participation__recent-group">L-60</span>
+							<p class="participation__recent-date">20 мая 2022</p>
+						</div>
+					</div>
+
+					<div class="participation__recent-item">
+						<p class="participation__recent-name">Михаил Федитник</p>
+						<div class="participation__recent-box">
+							<span class="participation__recent-group">L-60</span>
+							<p class="participation__recent-date">20 мая 2022</p>
+						</div>
+					</div>
+				</div>
+				<div class="participation__howto">
+					<h2 class="participation__howto-title">Как принять участие?</h2>
+
+					<ul class="participation__howto-stages">
+						<li class="participation__howto-list">
+							<span class="participation__howto-num">1</span>
+							<a class="participation__howto-link" href="#">Авторизируйтесь</a>
+							в нашем премиум магазине
+						</li>
+
+						<li class="participation__howto-list">
+							<span class="participation__howto-num">2</span>
+							Укажите email вашего игрового аккаунта в
+							<a class="participation__howto-link" href="#">личном кабинете</a>
+						</li>
+
+						<li class="participation__howto-list">
+							<span class="participation__howto-num">3</span>
+							Поделитесь ссылкой с друзьями
+							<div class="participation__howto-share">
+								<a class="paticipation__howto-social" href="#">
+									<img class="participation__howto-img" src="./images/icons/vk.svg" alt="vk-icon">
+								</a>
+								<a class="paticipation__howto-social" href="#">
+									<img class="participation__howto-img" src="./images/icons/facebook.svg"
+										alt="facebook-icon">
+								</a>
+								<a class="paticipation__howto-social" href="#">
+									<img class="participation__howto-img" src="./images/icons/mail-ru-mir.svg"
+										alt="mail-ru-mir-icon">
+								</a>
+							</div>
+						</li>
+
+						<li class="participation__howto-list">
+							<span class="participation__howto-num">4</span>
+							Нажмите внизу на кнопку <span>“УЧАСТВОВАТЬ”</span>
+						</li>
+					</ul>
+					<button class="participation__howto-btn" type="submit">Участвовать<button>
+				</div>
+			</div>
+		</div>
+	</section>
+	<footer class="footer">
+		<div class="container">
+			<div class="footer__inner">
+				<div class="footer__info">
+					<a class="logo" href="/">
+						<img class="logo__img" src="./images/icons/logo.svg" alt="logo">
+					</a>
+					<p class="footer__text">Премиум магазин скинов Fortnite</p>
+					<a class="footer__political-link" href="#">
+						<span>Политика конфиденциальности</span>
+					</a>
+					<a class="footer__agreement-link" href="#">
+						<span>Пользовательское соглашение</span>
+					</a>
+				</div>
+
+				<div class="footer__payment">
+					<p class="footer__payment-text">В данный момент доступны такие типы оплаты:</p>
+					<div class="footer__payment-box">
+						<img class="footer__payment-img" src="./images/icons/perfect_money.svg"
+							alt="perfect_money-icon">
+						<img class="footer__payment-img" src="./images/icons/qiwi-crypto.svg" alt="qiwi-crypto-icon">
+						<img class="footer__payment-img" src="./images/icons/yandex-money.svg" alt="yandex-money-icon">
+						<img class="footer__payment-img" src="./images/icons/visa.svg" alt="visa-icon">
+						<img class="footer__payment-img" src="./images/icons/mastercard.svg" alt="mastercard-icon">
+						<img class="footer__payment-img" src="./images/icons/payeer.svg" alt="payeer-icon">
+						<img class="footer__payment-img" src="./images/icons/mir.svg" alt="mir-icon">
+					</div>
+				</div>
+
+			</div>
+		</div>
+	</footer>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+	<script src="js/main.js"></script>
+	<script src="js/header.js"></script>
 
 </body>
 
