--- a/news.html
+++ b/news.html
@@ -64,6 +64,7 @@
 		</div>
 
 	</header>
+
 	<main class="news__main main">
 		<section class="breadcrumbs">
 			<div class="container">
@@ -140,11 +141,12 @@
 			</div>
 		</section>
 	</main>
+
 	<footer class="footer">
 		<div class="container">
 			<div class="footer__inner">
 				<div class="footer__info">
-					<a class="logo" href="/">
+					<a class="logo" href="./index.html">
 						<img class="logo__img" src="./images/icons/logo.svg" alt="logo">
 					</a>
 					<p class="footer__text">Премиум магазин скинов Fortnite</p>
@@ -173,6 +175,7 @@
 			</div>
 		</div>
 	</footer>
+
 	<script src="js/header.js"></script>
 </body>
 
