--- a/participation.html
+++ b/participation.html
@@ -65,95 +65,99 @@
 		</div>
 
 	</header>
-	<section class="participation">
-		<div class="container">
-			<div class="participation__inner">
-				<div class="participation__recent">
-					<h2 class="participation__recent-title">Последние победители:</h2>
 
-					<div class="participation__recent-item">
-						<p class="participation__recent-name">Михаил Федитник</p>
-						<div class="participation__recent-box">
-							<span class="participation__recent-group">L-60</span>
-							<p class="participation__recent-date">20 мая 2022</p>
-						</div>
-					</div>
+	<main>
+		<section class="participation">
+			<div class="container">
+				<div class="participation__inner">
+					<div class="participation__recent">
+						<h2 class="participation__recent-title">Последние победители:</h2>
 
-					<div class="participation__recent-item">
-						<p class="participation__recent-name">Михаил Федитник</p>
-						<div class="participation__recent-box">
-							<span class="participation__recent-group">L-60</span>
-							<p class="participation__recent-date">20 мая 2022</p>
-						</div>
-					</div>
-					<div class="participation__recent-item">
-						<p class="participation__recent-name">Михаил Федитник</p>
-						<div class="participation__recent-box">
-							<span class="participation__recent-group">L-60</span>
-							<p class="participation__recent-date">20 мая 2022</p>
-						</div>
-					</div>
-
-					<div class="participation__recent-item">
-						<p class="participation__recent-name">Михаил Федитник</p>
-						<div class="participation__recent-box">
-							<span class="participation__recent-group">L-60</span>
-							<p class="participation__recent-date">20 мая 2022</p>
-						</div>
-					</div>
-
-					<div class="participation__recent-item">
-						<p class="participation__recent-name">Михаил Федитник</p>
-						<div class="participation__recent-box">
-							<span class="participation__recent-group">L-60</span>
-							<p class="participation__recent-date">20 мая 2022</p>
-						</div>
-					</div>
-				</div>
-				<div class="participation__howto">
-					<h2 class="participation__howto-title">Как принять участие?</h2>
-
-					<ul class="participation__howto-stages">
-						<li class="participation__howto-list">
-							<span class="participation__howto-num">1</span>
-							<a class="participation__howto-link" href="#">Авторизируйтесь</a>
-							в нашем премиум магазине
-						</li>
-
-						<li class="participation__howto-list">
-							<span class="participation__howto-num">2</span>
-							Укажите email вашего игрового аккаунта в
-							<a class="participation__howto-link" href="#">личном кабинете</a>
-						</li>
-
-						<li class="participation__howto-list">
-							<span class="participation__howto-num">3</span>
-							Поделитесь ссылкой с друзьями
-							<div class="participation__howto-share">
-								<a class="paticipation__howto-social" href="#">
-									<img class="participation__howto-img" src="./images/icons/vk.svg" alt="vk-icon">
-								</a>
-								<a class="paticipation__howto-social" href="#">
-									<img class="participation__howto-img" src="./images/icons/facebook.svg"
-										alt="facebook-icon">
-								</a>
-								<a class="paticipation__howto-social" href="#">
-									<img class="participation__howto-img" src="./images/icons/mail-ru-mir.svg"
-										alt="mail-ru-mir-icon">
-								</a>
+						<div class="participation__recent-item">
+							<p class="participation__recent-name">Михаил Федитник</p>
+							<div class="participation__recent-box">
+								<span class="participation__recent-group">L-60</span>
+								<p class="participation__recent-date">20 мая 2022</p>
 							</div>
-						</li>
+						</div>
 
-						<li class="participation__howto-list">
-							<span class="participation__howto-num">4</span>
-							Нажмите внизу на кнопку <span>“УЧАСТВОВАТЬ”</span>
-						</li>
-					</ul>
-					<button class="participation__howto-btn" type="submit">Участвовать<button>
+						<div class="participation__recent-item">
+							<p class="participation__recent-name">Михаил Федитник</p>
+							<div class="participation__recent-box">
+								<span class="participation__recent-group">L-60</span>
+								<p class="participation__recent-date">20 мая 2022</p>
+							</div>
+						</div>
+						<div class="participation__recent-item">
+							<p class="participation__recent-name">Михаил Федитник</p>
+							<div class="participation__recent-box">
+								<span class="participation__recent-group">L-60</span>
+								<p class="participation__recent-date">20 мая 2022</p>
+							</div>
+						</div>
+
+						<div class="participation__recent-item">
+							<p class="participation__recent-name">Михаил Федитник</p>
+							<div class="participation__recent-box">
+								<span class="participation__recent-group">L-60</span>
+								<p class="participation__recent-date">20 мая 2022</p>
+							</div>
+						</div>
+
+						<div class="participation__recent-item">
+							<p class="participation__recent-name">Михаил Федитник</p>
+							<div class="participation__recent-box">
+								<span class="participation__recent-group">L-60</span>
+								<p class="participation__recent-date">20 мая 2022</p>
+							</div>
+						</div>
+					</div>
+					<div class="participation__howto">
+						<h2 class="participation__howto-title">Как принять участие?</h2>
+
+						<ul class="participation__howto-stages">
+							<li class="participation__howto-list">
+								<span class="participation__howto-num">1</span>
+								<a class="participation__howto-link" href="#">Авторизируйтесь</a>
+								в нашем премиум магазине
+							</li>
+
+							<li class="participation__howto-list">
+								<span class="participation__howto-num">2</span>
+								Укажите email вашего игрового аккаунта в
+								<a class="participation__howto-link" href="#">личном кабинете</a>
+							</li>
+
+							<li class="participation__howto-list">
+								<span class="participation__howto-num">3</span>
+								Поделитесь ссылкой с друзьями
+								<div class="participation__howto-share">
+									<a class="paticipation__howto-social" href="#">
+										<img class="participation__howto-img" src="./images/icons/vk.svg" alt="vk-icon">
+									</a>
+									<a class="paticipation__howto-social" href="#">
+										<img class="participation__howto-img" src="./images/icons/facebook.svg"
+											alt="facebook-icon">
+									</a>
+									<a class="paticipation__howto-social" href="#">
+										<img class="participation__howto-img" src="./images/icons/mail-ru-mir.svg"
+											alt="mail-ru-mir-icon">
+									</a>
+								</div>
+							</li>
+
+							<li class="participation__howto-list">
+								<span class="participation__howto-num">4</span>
+								Нажмите внизу на кнопку <span>“УЧАСТВОВАТЬ”</span>
+							</li>
+						</ul>
+						<button class="participation__howto-btn" type="submit">Участвовать<button>
+					</div>
 				</div>
 			</div>
-		</div>
-	</section>
+		</section>
+	</main>
+
 	<footer class="footer">
 		<div class="container">
 			<div class="footer__inner">
