--- a/reviews.html
+++ b/reviews.html
@@ -15,7 +15,7 @@
 
 			<div class="header__row">
 				<div class="header__logo">
-					<a href="/index.html">
+					<a href="./index.html">
 						<img src="./images/icons//logo.svg" alt="logo" />
 					</a>
 				</div>
@@ -161,7 +161,7 @@
 		<div class="container">
 			<div class="footer__inner">
 				<div class="footer__info">
-					<a class="logo" href="/">
+					<a class="logo" href="./index.html">
 						<img class="logo__img" src="./images/icons/logo.svg" alt="logo">
 					</a>
 					<p class="footer__text">Премиум магазин скинов Fortnite</p>
