--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 									<div class="card-item__elipse"></div>
 									<p class="card-item__name">в-баксы</p>
 									<div class="card-item__img small-img">
-										<img src="/images/product-characters/b-cash.png" alt="b-cash" media>
+										<img src="./images/product-characters/b-cash.png" alt="b-cash" media>
 									</div>
 									<p class="card-item__price">599 р</p>
 								</div>
@@ -317,7 +317,7 @@
 										<div class="card-item__elipse"></div>
 										<p class="card-item__name">Какаши</p>
 										<div class="card-item__img">
-											<img src="/images/product-characters/kakashi.png" alt="kakashi">
+											<img src="./images/product-characters/kakashi.png" alt="kakashi">
 										</div>
 										<p class="card-item__price">599 р</p>
 									</div>
