--- a/distribution.html
+++ b/distribution.html
@@ -78,7 +78,6 @@
 								скинов</span></li>
 					</ul>
 					<div class="return">
-						<img src="./images/arrow-left.svg" alt="" class="arrow__left">
 						<a href="./index.html" class="btn-prev-page">Назад</a>
 					</div>
 				</nav>
@@ -88,7 +87,7 @@
 						<div class="left-side">
 							<p class="current__giveaway-title">Бесплатная раздача скинов Fortnite</p>
 							<p class="current__giveaway-desc">До начала раздачи</p>
-							<span class="current__giveaway-timer">13:01:09</span>
+							<span class="current__giveaway-timer" id="time">13:01:09</span>
 							<div class="table">
 								<div class="table__left-side">
 									<p class="table__left-side__text">Участников</p>
@@ -149,6 +148,7 @@
 			</div>
 		</div>
 	</footer>
+	<script src="js/countdown.js"></script>
 </body>
 
 </html>
