--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 						</div>
 
 						<div class="intro__giveaway-timer">
-							<div class="intro__giveaway-time"> 04:33:21</div>
+							<div class="intro__giveaway-time" id="time">04:33:21</div>
 							<a href="./participation.html" class="intro__giveaway-btn">Участвовать</a>
 							<img class="intro__giveaway-img" src="./images/index/b-cash.png" alt="b-cash">
 						</div>
@@ -647,9 +647,11 @@
 		</div>
 	</footer>
 
+	<script src="js/header.js"></script>
 	<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 	<script src="js/main.js"></script>
-	<script src="js/header.js"></script>
+	<script src="js/countdown.js"></script>
+
 
 </body>
 
