--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 	<link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/media.css">
 
 </head>
 
@@ -23,7 +24,9 @@
 					</a>
 				</div>
 				<ul class="header__menu">
-					<li class="header__link header__link--active"><a href="./index.html">Главная</a></li>
+					<li class="header__link header__link--active">
+						<a href="./index.html">Главная</a>
+					</li>
 					<li class="header__link"><a href="./guarantees.html">Гарантии</a></li>
 					<li class="header__link"><a href="./news.html">Новости</a></li>
 					<li class="header__link"><a href="./reviews.html">Отзывы</a></li>
