payment-form fix

--- a/card-product.html
+++ b/card-product.html
@@ -194,6 +194,22 @@
 									</div>
 								</div>
 							</div>
+							<footer class="payment-form__footer payment-form-footer">
+								<div class="payment-form-footer__row">
+
+									<a href="#" class="payment-form-footer__agreement">Условия использования</a>
+
+									<div class="payment-form-footer__links">
+										<a class="payment-form-footer__link" href="https://t.me/Help_Support_PP">
+											<span>Telegram:</span> @Help_Support_PP</a>
+										<a class="payment-form-footer__link" href="mailto:info@paypalych.com">
+											<span>Email:</span> info@paypalych.com</a>
+										<p class="payment-form-footer__license">2022 © Paypalych. все права защищены
+										</p>
+									</div>
+
+								</div>
+							</footer>
 						</div>
 
 						<div class="payment-form-step " style="display:none" data-count="2">
@@ -261,6 +277,22 @@
 										</p>
 									</div>
 								</div>
+								<footer class="payment-form__footer payment-form-footer">
+									<div class="payment-form-footer__row">
+
+										<a href="#" class="payment-form-footer__agreement">Условия использования</a>
+
+										<div class="payment-form-footer__links">
+											<a class="payment-form-footer__link" href="https://t.me/Help_Support_PP">
+												<span>Telegram:</span> @Help_Support_PP</a>
+											<a class="payment-form-footer__link" href="mailto:info@paypalych.com">
+												<span>Email:</span> info@paypalych.com</a>
+											<p class="payment-form-footer__license">2022 © Paypalych. все права защищены
+											</p>
+										</div>
+
+									</div>
+								</footer>
 							</div>
 						</div>
 
@@ -301,8 +333,23 @@
 									Перед покупкой вы соглашаетесь с пользовательским соглашением.
 								</p>
 							</div>
-						</div>
+							<footer class="payment-form__footer payment-form-footer">
+								<div class="payment-form-footer__row">
 
+									<a href="#" class="payment-form-footer__agreement">Условия использования</a>
+
+									<div class="payment-form-footer__links">
+										<a class="payment-form-footer__link" href="https://t.me/Help_Support_PP">
+											<span>Telegram:</span> @Help_Support_PP</a>
+										<a class="payment-form-footer__link" href="mailto:info@paypalych.com">
+											<span>Email:</span> info@paypalych.com</a>
+										<p class="payment-form-footer__license">2022 © Paypalych. все права защищены
+										</p>
+									</div>
+
+								</div>
+							</footer>
+						</div>
 					</form>
 				</main>
 			</div>
