fixes fck page media

--- a/distribution.html
+++ b/distribution.html
@@ -68,53 +68,57 @@
 		</div>
 
 	</header>
-	<section class="site__content">
-		<div class="container">
-			<div class="content-layout">
-				<nav aria-label="Breadcrumb" class="breadcrumb">
-					<ul class="breadcrumb__list">
-						<li class="breadcrumb__link"><a href="#">Главная</a></li>
-						<li class="breadcrumb__link breadcrumb__link--current"><span aria-current="page">Раздача
-								скинов</span></li>
-					</ul>
-					<div class="return">
-						<a href="./index.html" class="btn-prev-page">Назад</a>
-					</div>
-				</nav>
-				<div class="current__giveaway">
-					<p class="current__giveaway-title-mob-version">Бесплатная раздача скинов Fortnite</p>
-					<div class="current__giveaway-info">
-						<div class="left-side">
-							<p class="current__giveaway-title">Бесплатная раздача скинов Fortnite</p>
-							<p class="current__giveaway-desc">До начала раздачи</p>
-							<span class="current__giveaway-timer" id="time">13:01:09</span>
-							<div class="table">
-								<div class="table__left-side">
-									<p class="table__left-side__text">Участников</p>
-									<p class="table__left-side__numbers">351</p>
+
+	<main>
+		<section class="site__content">
+			<div class="container">
+				<div class="content-layout">
+					<nav aria-label="Breadcrumb" class="breadcrumb">
+						<ul class="breadcrumb__list">
+							<li class="breadcrumb__link"><a href="#">Главная</a></li>
+							<li class="breadcrumb__link breadcrumb__link--current"><span aria-current="page">Раздача
+									скинов</span></li>
+						</ul>
+						<div class="return">
+							<a href="./index.html" class="btn-prev-page">Назад</a>
+						</div>
+					</nav>
+					<div class="current__giveaway">
+						<p class="current__giveaway-title-mob-version">Бесплатная раздача скинов Fortnite</p>
+						<div class="current__giveaway-info">
+							<div class="left-side">
+								<p class="current__giveaway-title">Бесплатная раздача скинов Fortnite</p>
+								<p class="current__giveaway-desc">До начала раздачи</p>
+								<span class="current__giveaway-timer" id="time">13:01:09</span>
+								<div class="table">
+									<div class="table__left-side">
+										<p class="table__left-side__text">Участников</p>
+										<p class="table__left-side__numbers">351</p>
+									</div>
+									<div class="table__right-side">
+										<p class="table__rigth-side__text">Вчерашний победитель</p>
+										<p class="table__right-side__name">a.mi**@mail.ru</p>
+									</div>
 								</div>
-								<div class="table__right-side">
-									<p class="table__rigth-side__text">Вчерашний победитель</p>
-									<p class="table__right-side__name">a.mi**@mail.ru</p>
+								<a href="#" class="left-side__button">Участвовать</a>
+							</div>
+							<div class="item-card" href="#">
+								<div class="card-item__bg"></div>
+								<div class="card-item__face">
+									<p class="card-item__face-text">ЛОТ ДНЯ</p>
+									<img src="./images/John-Wick.png" alt="" class="card-item__character">
+									<img src="./images/elipse-bg.svg" alt="" class="elipse-bg">
+									<a href="" class="card-item__buy-btn">КУПИТЬ</a>
 								</div>
 							</div>
-							<a href="#" class="left-side__button">Участвовать</a>
-						</div>
-						<div class="item-card" href="#">
-							<div class="card-item__bg"></div>
-							<div class="card-item__face">
-								<p class="card-item__face-text">ЛОТ ДНЯ</p>
-								<img src="./images/John-Wick.png" alt="" class="card-item__character">
-								<img src="./images/elipse-bg.svg" alt="" class="elipse-bg">
-								<a href="" class="card-item__buy-btn">КУПИТЬ</a>
-							</div>
 						</div>
 					</div>
+					<a href="#" class="content-layout__btn">УЧАСТВОВАТЬ</a>
 				</div>
-				<a href="#" class="content-layout__btn">УЧАСТВОВАТЬ</a>
 			</div>
-		</div>
-	</section>
+		</section>
+	</main>
+
 	<footer class="footer">
 		<div class="container">
 			<div class="footer__inner">
@@ -134,8 +138,7 @@
 				<div class="footer__payment">
 					<p class="footer__payment-text">В данный момент доступны такие типы оплаты:</p>
 					<div class="footer__payment-box">
-						<img class="footer__payment-img" src="./images/icons/perfect_money.svg"
-							alt="perfect_money-icon">
+						<img class="footer__payment-img" src="./images/icons/perfect_money.svg" alt="perfect_money-icon">
 						<img class="footer__payment-img" src="./images/icons/qiwi-crypto.svg" alt="qiwi-crypto-icon">
 						<img class="footer__payment-img" src="./images/icons/yandex-money.svg" alt="yandex-money-icon">
 						<img class="footer__payment-img" src="./images/icons/visa.svg" alt="visa-icon">
