--- a/guarantees.html
+++ b/guarantees.html
@@ -66,216 +66,222 @@
 		</div>
 
 	</header>
-	<section class="breadcrumbs">
-		<div class="container">
-			<nav class="breadcrumb" aria-label="Breadcrumb">
-				<ul class="breadcrumb__list">
-					<li class="breadcrumb__link"><a href="./index.html">Главная</a></li>
-					<li class="breadcrumb__link breadcrumb__link--current">
-						<span aria-current="page">Гарантии</span>
-					</li>
-				</ul>
-				<a href="./index.html" class="btn-prev-page">Назад</a>
-			</nav>
-		</div>
-	</section>
 
-	<section class="guarantees">
-		<div class="container">
-			<div class="guarantees__info">
-				<h3 class="guarantees__title">УСПЕШНЫЕ СДЕЛКИ
-				</h3>
-				<p class="guarantees__text">
-					Более трёх лет успешной деятельности. Около 25 тысяч обработанных заказов и тысячи довольных
-					танкистов.
-					Нас рекомендуют и советуют своим друзьям и соклановцам!
-				</p>
 
-				<h3 class="guarantees__title">ОТКРЫТЫЕ ОТЗЫВЫ</h3>
-				<p class="guarantees__text">
-					У нас имеется раздел <a href="./reviews.html">Отзывы</a>, где вы всегда можете оставить отзыв который модератор
-					по
-					возможности сразу опубликует.
-					В нашем магазине оставить отзыв может любой желающий,
-					но в тоже время мы боремся против СПАМа и рекламы других ресурсов на нашем.
-				</p>
-
-				<h3 class="guarantees__title">ОФФЛАЙН ТОЧКА ПРОДАЖ</h3>
-				<p class="guarantees__text">
-					У нас есть полноценный магазин где вы можете купить скретч-карту на бонус-коды за наличные средства
-					либо
-					банковскую карту через наш POS-терминал. Также мы продаем игровые приставки, аксессуары и другое
-					лицензионное ПО. Находимся мы в г. Екатеринбург.
-					Адрес нашего магазина есть в разделе Контакты.
-				</p>
-
-				<h3 class="guarantees__title">ПОДДЕРЖКА ПО ТЕЛЕФОНУ</h3>
-				<p class="guarantees__text">
-					Мы готовы связаться с вами по телефону, для этого отпишите Администратору с желанием связаться с
-					вами и
-					мы вам обязательно перезвоним!
-				</p>
-
-				<h3 class="guarantees__title">ОФИЦИАЛЬНЫЕ ПЛАТЕЖНЫЕ ШЛЮЗы</h3>
-				<p class="guarantees__text">
-					Все платежи проходят через защищенный шлюз крупнейшего банка России, где у нас зарегистрирован
-					расчетный
-					счёт.
-					Вы можете не бояться за сохраность своих средств.
-				</p>
-
-				<h3 class="guarantees__title">ОТКРЫТИЕ МАГАЗИНА И ДРУЖЕЛЮБНОСТЬ</h3>
-				<p class="guarantees__text">
-					FORTNITE это не просто магазин, это стало частью нашей жизни всего коллектива,
-					в которую было вложено не мало средств и репутацией которого мы дорожим.
-				</p>
+	<main>
+		<section class="breadcrumbs">
+			<div class="container">
+				<nav class="breadcrumb" aria-label="Breadcrumb">
+					<ul class="breadcrumb__list">
+						<li class="breadcrumb__link"><a href="./index.html">Главная</a></li>
+						<li class="breadcrumb__link breadcrumb__link--current">
+							<span aria-current="page">Гарантии</span>
+						</li>
+					</ul>
+					<a href="./index.html" class="btn-prev-page">Назад</a>
+				</nav>
 			</div>
-			<div class="popular-offers">
-				<h2 class="popular-offers__title title">Популярные предложения</h2>
-
-				<!-- Slider main container -->
-				<div class="popular-offers__slider swiper ">
-					<!-- Additional required wrapper -->
-					<div class="swiper-wrapper popular-offers__wrapper">
-						<!-- Slides -->
-						<div class="popular-offers__slide swiper-slide ">
-							<a class="popular-offers__item card-item" href="#">
-								<div class="card-item__box">
-									<div class="card-item__elipse"></div>
-									<p class="card-item__name">Джон Уик</p>
-									<div class="card-item__img">
-										<img src="./images/product-characters/John-Wick.png" alt="john-wick">
-									</div>
-									<p class="card-item__price">599 р</p>
-								</div>
-							</a>
-						</div>
-
-						<div class="popular-offers__slide swiper-slide ">
-							<a class="popular-offers__item card-item" href="#">
-								<div class="card-item__box">
-									<div class="card-item__elipse"></div>
-									<p class="card-item__name">Какаши</p>
-									<div class="card-item__img">
-										<img src="./images/product-characters/kakashi.png" alt="kakashi">
-									</div>
-									<p class="card-item__price">599 р</p>
-								</div>
-							</a>
-						</div>
-
-						<div class="popular-offers__slide swiper-slide ">
-							<a class="popular-offers__item card-item" href="#">
-								<div class="card-item__box">
-									<div class="card-item__elipse"></div>
-									<p class="card-item__name">снегобой</p>
-									<div class="card-item__img">
-										<img src="./images/product-characters/snowboy.png" alt="snow-boy">
-									</div>
-									<p class="card-item__price">599 р</p>
-								</div>
-							</a>
-						</div>
-
-						<div class="popular-offers__slide swiper-slide ">
-							<a class="popular-offers__item card-item" href="#">
-								<div class="card-item__box">
-									<div class="card-item__elipse"></div>
-									<p class="card-item__name">в-баксы</p>
-									<div class="card-item__img small-img">
-										<img src="./images/product-characters/b-cash.png" alt="b-cash">
-									</div>
-									<p class="card-item__price">599 р</p>
-								</div>
-							</a>
-						</div>
-
-						<div class="popular-offers__slide swiper-slide ">
-							<a class="popular-offers__item card-item" href="#">
-								<div class="card-item__box">
-									<div class="card-item__elipse"></div>
-									<p class="card-item__name">в-баксы</p>
-									<div class="card-item__img small-img">
-										<img src="./images/product-characters/b-cash.png" alt="b-cash">
-									</div>
-									<p class="card-item__price">599 р</p>
-								</div>
-							</a>
-						</div>
-
-						<div class="popular-offers__slide swiper-slide ">
-							<a class="popular-offers__item card-item" href="#">
-								<div class="card-item__box">
-									<div class="card-item__elipse"></div>
-									<p class="card-item__name">Джон Уик</p>
-									<div class="card-item__img">
-										<img src="./images/product-characters/John-Wick.png" alt="john-wick">
-									</div>
-									<p class="card-item__price">599 р</p>
-								</div>
-							</a>
-						</div>
-
-						<div class="popular-offers__slide swiper-slide ">
-							<a class="popular-offers__item card-item" href="#">
-								<div class="card-item__box">
-									<div class="card-item__elipse"></div>
-									<p class="card-item__name">Какаши</p>
-									<div class="card-item__img">
-										<img src="./images/product-characters/kakashi.png" alt="kakashi">
-									</div>
-									<p class="card-item__price">599 р</p>
-								</div>
-							</a>
-						</div>
-
-						<div class="popular-offers__slide swiper-slide ">
-							<a class="popular-offers__item card-item" href="#">
-								<div class="card-item__box">
-									<div class="card-item__elipse"></div>
-									<p class="card-item__name">снегобой</p>
-									<div class="card-item__img">
-										<img src="./images/product-characters/snowboy.png" alt="snow-boy">
-									</div>
-									<p class="card-item__price">599 р</p>
-								</div>
-							</a>
-						</div>
-
-						<div class="popular-offers__slide swiper-slide ">
-							<a class="popular-offers__item card-item" href="#">
-								<div class="card-item__box">
-									<div class="card-item__elipse"></div>
-									<p class="card-item__name">в-баксы</p>
-									<div class="card-item__img small-img">
-										<img src="./images/product-characters/b-cash.png" alt="b-cash">
-									</div>
-									<p class="card-item__price">599 р</p>
-								</div>
-							</a>
-						</div>
-
-						<div class="popular-offers__slide swiper-slide ">
-							<a class="popular-offers__item card-item" href="#">
-								<div class="card-item__box">
-									<div class="card-item__elipse"></div>
-									<p class="card-item__name">в-баксы</p>
-									<div class="card-item__img small-img">
-										<img src="./images/product-characters/b-cash.png" alt="b-cash">
-									</div>
-									<p class="card-item__price">599 р</p>
-								</div>
-							</a>
-						</div>
-					</div>
-
-					<!-- If we need pagination -->
-					<div class="popular-offers__pagination swiper-pagination"></div>
+		</section>
+	
+		<section class="guarantees">
+			<div class="container">
+				<div class="guarantees__info">
+					<h3 class="guarantees__title">УСПЕШНЫЕ СДЕЛКИ
+					</h3>
+					<p class="guarantees__text">
+						Более трёх лет успешной деятельности. Около 25 тысяч обработанных заказов и тысячи довольных
+						танкистов.
+						Нас рекомендуют и советуют своим друзьям и соклановцам!
+					</p>
+	
+					<h3 class="guarantees__title">ОТКРЫТЫЕ ОТЗЫВЫ</h3>
+					<p class="guarantees__text">
+						У нас имеется раздел <a href="./reviews.html">Отзывы</a>, где вы всегда можете оставить отзыв который модератор
+						по
+						возможности сразу опубликует.
+						В нашем магазине оставить отзыв может любой желающий,
+						но в тоже время мы боремся против СПАМа и рекламы других ресурсов на нашем.
+					</p>
+	
+					<h3 class="guarantees__title">ОФФЛАЙН ТОЧКА ПРОДАЖ</h3>
+					<p class="guarantees__text">
+						У нас есть полноценный магазин где вы можете купить скретч-карту на бонус-коды за наличные средства
+						либо
+						банковскую карту через наш POS-терминал. Также мы продаем игровые приставки, аксессуары и другое
+						лицензионное ПО. Находимся мы в г. Екатеринбург.
+						Адрес нашего магазина есть в разделе Контакты.
+					</p>
+	
+					<h3 class="guarantees__title">ПОДДЕРЖКА ПО ТЕЛЕФОНУ</h3>
+					<p class="guarantees__text">
+						Мы готовы связаться с вами по телефону, для этого отпишите Администратору с желанием связаться с
+						вами и
+						мы вам обязательно перезвоним!
+					</p>
+	
+					<h3 class="guarantees__title">ОФИЦИАЛЬНЫЕ ПЛАТЕЖНЫЕ ШЛЮЗы</h3>
+					<p class="guarantees__text">
+						Все платежи проходят через защищенный шлюз крупнейшего банка России, где у нас зарегистрирован
+						расчетный
+						счёт.
+						Вы можете не бояться за сохраность своих средств.
+					</p>
+	
+					<h3 class="guarantees__title">ОТКРЫТИЕ МАГАЗИНА И ДРУЖЕЛЮБНОСТЬ</h3>
+					<p class="guarantees__text">
+						FORTNITE это не просто магазин, это стало частью нашей жизни всего коллектива,
+						в которую было вложено не мало средств и репутацией которого мы дорожим.
+					</p>
 				</div>
-
+				<div class="popular-offers">
+					<h2 class="popular-offers__title title">Популярные предложения</h2>
+	
+					<!-- Slider main container -->
+					<div class="popular-offers__slider swiper ">
+						<!-- Additional required wrapper -->
+						<div class="swiper-wrapper popular-offers__wrapper">
+							<!-- Slides -->
+							<div class="popular-offers__slide swiper-slide ">
+								<a class="popular-offers__item card-item" href="#">
+									<div class="card-item__box">
+										<div class="card-item__elipse"></div>
+										<p class="card-item__name">Джон Уик</p>
+										<div class="card-item__img">
+											<img src="./images/product-characters/John-Wick.png" alt="john-wick">
+										</div>
+										<p class="card-item__price">599 р</p>
+									</div>
+								</a>
+							</div>
+	
+							<div class="popular-offers__slide swiper-slide ">
+								<a class="popular-offers__item card-item" href="#">
+									<div class="card-item__box">
+										<div class="card-item__elipse"></div>
+										<p class="card-item__name">Какаши</p>
+										<div class="card-item__img">
+											<img src="./images/product-characters/kakashi.png" alt="kakashi">
+										</div>
+										<p class="card-item__price">599 р</p>
+									</div>
+								</a>
+							</div>
+	
+							<div class="popular-offers__slide swiper-slide ">
+								<a class="popular-offers__item card-item" href="#">
+									<div class="card-item__box">
+										<div class="card-item__elipse"></div>
+										<p class="card-item__name">снегобой</p>
+										<div class="card-item__img">
+											<img src="./images/product-characters/snowboy.png" alt="snow-boy">
+										</div>
+										<p class="card-item__price">599 р</p>
+									</div>
+								</a>
+							</div>
+	
+							<div class="popular-offers__slide swiper-slide ">
+								<a class="popular-offers__item card-item" href="#">
+									<div class="card-item__box">
+										<div class="card-item__elipse"></div>
+										<p class="card-item__name">в-баксы</p>
+										<div class="card-item__img small-img">
+											<img src="./images/product-characters/b-cash.png" alt="b-cash">
+										</div>
+										<p class="card-item__price">599 р</p>
+									</div>
+								</a>
+							</div>
+	
+							<div class="popular-offers__slide swiper-slide ">
+								<a class="popular-offers__item card-item" href="#">
+									<div class="card-item__box">
+										<div class="card-item__elipse"></div>
+										<p class="card-item__name">в-баксы</p>
+										<div class="card-item__img small-img">
+											<img src="./images/product-characters/b-cash.png" alt="b-cash">
+										</div>
+										<p class="card-item__price">599 р</p>
+									</div>
+								</a>
+							</div>
+	
+							<div class="popular-offers__slide swiper-slide ">
+								<a class="popular-offers__item card-item" href="#">
+									<div class="card-item__box">
+										<div class="card-item__elipse"></div>
+										<p class="card-item__name">Джон Уик</p>
+										<div class="card-item__img">
+											<img src="./images/product-characters/John-Wick.png" alt="john-wick">
+										</div>
+										<p class="card-item__price">599 р</p>
+									</div>
+								</a>
+							</div>
+	
+							<div class="popular-offers__slide swiper-slide ">
+								<a class="popular-offers__item card-item" href="#">
+									<div class="card-item__box">
+										<div class="card-item__elipse"></div>
+										<p class="card-item__name">Какаши</p>
+										<div class="card-item__img">
+											<img src="./images/product-characters/kakashi.png" alt="kakashi">
+										</div>
+										<p class="card-item__price">599 р</p>
+									</div>
+								</a>
+							</div>
+	
+							<div class="popular-offers__slide swiper-slide ">
+								<a class="popular-offers__item card-item" href="#">
+									<div class="card-item__box">
+										<div class="card-item__elipse"></div>
+										<p class="card-item__name">снегобой</p>
+										<div class="card-item__img">
+											<img src="./images/product-characters/snowboy.png" alt="snow-boy">
+										</div>
+										<p class="card-item__price">599 р</p>
+									</div>
+								</a>
+							</div>
+	
+							<div class="popular-offers__slide swiper-slide ">
+								<a class="popular-offers__item card-item" href="#">
+									<div class="card-item__box">
+										<div class="card-item__elipse"></div>
+										<p class="card-item__name">в-баксы</p>
+										<div class="card-item__img small-img">
+											<img src="./images/product-characters/b-cash.png" alt="b-cash">
+										</div>
+										<p class="card-item__price">599 р</p>
+									</div>
+								</a>
+							</div>
+	
+							<div class="popular-offers__slide swiper-slide ">
+								<a class="popular-offers__item card-item" href="#">
+									<div class="card-item__box">
+										<div class="card-item__elipse"></div>
+										<p class="card-item__name">в-баксы</p>
+										<div class="card-item__img small-img">
+											<img src="./images/product-characters/b-cash.png" alt="b-cash">
+										</div>
+										<p class="card-item__price">599 р</p>
+									</div>
+								</a>
+							</div>
+						</div>
+	
+						<!-- If we need pagination -->
+						<div class="popular-offers__pagination swiper-pagination"></div>
+					</div>
+	
+				</div>
 			</div>
-		</div>
-	</section>
+		</section>
+	</main>
+
+
 	<footer class="footer">
 		<div class="container">
 			<div class="footer__inner">
