--- a/index.html
+++ b/index.html
@@ -126,7 +126,14 @@
 						</div>
 
 						<div class="intro__giveaway-timer">
-							<div class="intro__giveaway-time" id="time">04:33:21</div>
+							<div class="intro__giveaway-time timer">
+								<span class="hours">04</span>
+								<span>:</span>
+								<span class="minutes">33</span>
+								<span>:</span>
+								<span class="seconds">21</span>
+								<!-- 04:33:21 -->
+							</div>
 							<a href="./participation.html" class="intro__giveaway-btn">Участвовать</a>
 							<img class="intro__giveaway-img" src="./images/index/b-cash.png" alt="b-cash">
 						</div>
