--- a/distribution.html
+++ b/distribution.html
@@ -87,7 +87,16 @@
 						<div class="left-side">
 							<p class="current__giveaway-title">Бесплатная раздача скинов Fortnite</p>
 							<p class="current__giveaway-desc">До начала раздачи</p>
-							<span class="current__giveaway-timer" id="time">13:01:09</span>
+
+							<div class="current__giveaway-timer">
+
+								<span class="hours">13</span>
+								<span>:</span>
+								<span class="minutes">01</span>
+								<span>:</span>
+								<span class="seconds">09</span>
+							</div>
+
 							<div class="table">
 								<div class="table__left-side">
 									<p class="table__left-side__text">Участников</p>
